// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultNodeSorter correctly sorts nodes from captcha form response: captcha form node order 1`] = `
[
  {
    "group": "identifier_first",
    "inputType": "text",
    "name": "identifier",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "hidden",
    "name": "csrf_token",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": "hidden",
    "name": "transient_payload.captcha_turnstile_response",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "div",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
  {
    "group": "captcha",
    "inputType": "hidden",
    "name": "captcha_turnstile_options",
    "type": "input",
  },
  {
    "group": "identifier_first",
    "inputType": "submit",
    "name": "method",
    "type": "input",
  },
  {
    "group": "passkey",
    "inputType": "hidden",
    "name": "passkey_login",
    "type": "input",
  },
  {
    "group": "passkey",
    "inputType": "hidden",
    "name": "passkey_challenge",
    "type": "input",
  },
  {
    "group": "webauthn",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
]
`;

exports[`defaultNodeSorter correctly sorts nodes from one-step registration with captcha: one-step registration with captcha node order 1`] = `
[
  {
    "group": "default",
    "inputType": "hidden",
    "name": "csrf_token",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "email",
    "name": "traits.email",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "checkbox",
    "name": "traits.tos",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "name": "traits.phone",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "name": "traits.nested.name",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "password",
    "name": "password",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": "hidden",
    "name": "transient_payload.captcha_turnstile_response",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "div",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
  {
    "group": "captcha",
    "inputType": "hidden",
    "name": "captcha_turnstile_options",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "submit",
    "name": "method",
    "type": "input",
  },
  {
    "group": "passkey",
    "inputType": "button",
    "name": "passkey_register_trigger",
    "type": "input",
  },
  {
    "group": "passkey",
    "inputType": "hidden",
    "name": "passkey_register",
    "type": "input",
  },
  {
    "group": "passkey",
    "inputType": "hidden",
    "name": "passkey_create_data",
    "type": "input",
  },
  {
    "group": "webauthn",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
]
`;

exports[`defaultNodeSorter correctly sorts nodes from two-step registration with captcha: two-step registration with captcha node order 1`] = `
[
  {
    "group": "default",
    "inputType": "hidden",
    "name": "csrf_token",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "email",
    "name": "traits.email",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "checkbox",
    "name": "traits.tos",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "name": "traits.phone",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "name": "traits.nested.name",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": "hidden",
    "name": "transient_payload.captcha_turnstile_response",
    "type": "input",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "div",
  },
  {
    "group": "captcha",
    "inputType": undefined,
    "name": undefined,
    "type": "script",
  },
  {
    "group": "captcha",
    "inputType": "hidden",
    "name": "captcha_turnstile_options",
    "type": "input",
  },
  {
    "group": "profile",
    "inputType": "submit",
    "name": "method",
    "type": "input",
  },
]
`;

exports[`defaultNodeSorter correctly sorts nodes from unified password form response: unified password form node order 1`] = `
[
  {
    "group": "default",
    "inputType": "hidden",
    "name": "csrf_token",
    "type": "input",
  },
  {
    "group": "default",
    "inputType": "text",
    "name": "identifier",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "password",
    "name": "password",
    "type": "input",
  },
  {
    "group": "password",
    "inputType": "submit",
    "name": "method",
    "type": "input",
  },
]
`;
